Fix header layout shift

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -64,42 +64,53 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   border-radius: 1rem;
 }
 
 .nav-menu {
-  width: auto;
-  height: 2.75rem;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   display: flex;
   align-items: center;
-  justify-content: center;
+}
+
+.nav-menu span,
+.nav-menu img {
+  user-select: none;
+  pointer-events: none;
 }
 
 .nav-menu li {
   height: 100%;
   width: 100%;
-  padding: .375rem .5rem;
+  padding: .5rem .75rem;
+  display: flex;
+  align-items: center;
 }
 
-.nav-menu li button,
 .nav-menu li a {
+  text-align: center;
   font-size: .875rem;
   height: 100%;
   width: 100%;
-  padding: 0 1rem;
-  margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0 1rem;
+  margin: 0;
   border: 0;
   font-weight: 500;
   cursor: pointer;
   color: var(--header-text-before);
   box-shadow: none;
-  position: relative;
   border-radius: 1rem;
+}
+
+.nav-menu li:last-child a {
+  justify-content: space-between;
+  width: 6rem;
 }
 
 .nav-menu li a:hover {
@@ -107,20 +118,11 @@
   background: #fff;
 }
 
-.nav-menu li a:focus-visible,
-.nav-menu li button:focus-visible {
+.nav-menu li a:focus-visible {
   outline: 0;
   box-shadow: 0 0 0 2px var(--white1);
   -webkit-box-shadow: 0 0 0 2px var(--white1);
   -moz-box-shadow: 0 0 0 2px var(--white1);
-}
-
-.nav-menu li button img {
-  fill: none;
-  height: 14px;
-  width: 14px;
-  margin-left: .5rem;
-  transition: transform .2s ease-in-out;
 }
 
 .nav-menu--contact--active {
@@ -136,7 +138,6 @@
   background: var(--header-after);
 }
 
-.header-filter .header-nav .nav-menu li button,
 .header-filter .header-nav .nav-menu li a {
   color: var(--white1);
 }
@@ -152,8 +153,7 @@
 
 .nav-multi--caret {
   filter: invert(1);
-  height: 1rem;
-  width: 1rem;
+  transition: transform .2s ease-in-out;
 }
 
 .theme__light .nav-multi--caret {
@@ -190,28 +190,27 @@
 
 @media screen and (max-width: 640px) {
   .nav-menu li {
-    padding: .375rem .125rem;
+    padding: .5rem .125rem;
   }
 }
 
 @media screen and (max-width: 560px) {
-  .nav-menu li button img {
+  .header-logo img {
+    height: 1rem;
+    width: 1rem;
+  }
+
+  .nav-menu li:last-child a {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .nav-menu li a {
+    font-size: .75rem;
+    padding: 0 .75rem;
+  }
+
+  .nav-multi--caret {
     display: none;
-  }
-
-  .nav-menu li button:hover {
-    background: #fff;
-  }
-
-  .nav-menu li button:hover span {
-    color: #000;
-  }
-
-  .header-filter .nav-menu li button:hover {
-    background: var(--white1);
-  }
-
-  .header-filter .nav-menu li button:hover span {
-    color: var(--black0);
   }
 }
